[package]
authors = ["The Rust Project Developers"]
name = "rustc_expand"
version = "0.0.0"
edition = "2018"
build = false

[lib]
name = "rustc_expand"
path = "lib.rs"
doctest = false

[dependencies]
rustc_serialize = { path = "../libserialize", package = "serialize" }
log = "0.4"
rustc_ast = { path = "../librustc_ast" }
rustc_ast_pretty = { path = "../librustc_ast_pretty" }
rustc_ast_passes = { path = "../librustc_ast_passes" }
rustc_attr = { path = "../librustc_attr" }
rustc_data_structures = { path = "../librustc_data_structures" }
rustc_errors = { path = "../librustc_errors" }
rustc_feature = { path = "../librustc_feature" }
rustc_lexer = { path = "../librustc_lexer" }
rustc_lint_types = { path = "../librustc_lint_types" }
rustc_parse = { path = "../librustc_parse" }
rustc_session = { path = "../librustc_session" }
rustc_span = { path = "../librustc_span" }
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
