[package]
authors = ["The Rust Project Developers"]
name = "rustc_lint_types"
version = "0.0.0"
edition = "2018"

[lib]
name = "rustc_lint_types"
path = "lib.rs"

[dependencies]
rustc_data_structures = { path = "../librustc_data_structures" }
rustc_span = { path = "../librustc_span" }
rustc_ast = { path = "../librustc_ast" }
