[package]
authors = ["The Rust Project Developers"]
name = "rustc_mir_build"
version = "0.0.0"
edition = "2018"

[lib]
name = "rustc_mir_build"
path = "lib.rs"
doctest = false

[dependencies]
arena = { path = "../libarena" }
log = "0.4"
rustc_ast = { path = "../librustc_ast" }
rustc_apfloat = { path = "../librustc_apfloat" }
rustc_attr = { path = "../librustc_attr" }
rustc_data_structures = { path = "../librustc_data_structures" }
rustc_index = { path = "../librustc_index" }
rustc_errors = { path = "../librustc_errors" }
rustc_hir = { path = "../librustc_hir" }
rustc_infer = { path = "../librustc_infer" }
rustc_lint_types = { path = "../librustc_lint_types" }
rustc_macros = { path = "../librustc_macros" }
rustc_middle = { path = "../librustc_middle" }
rustc_serialize = { path = "../libserialize", package = "serialize" }
rustc_session = { path = "../librustc_session" }
rustc_span = { path = "../librustc_span" }
rustc_target = { path = "../librustc_target" }
rustc_trait_selection = { path = "../librustc_trait_selection" }
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
