[package]
authors = ["The Rust Project Developers"]
name = "rustc_privacy"
version = "0.0.0"
edition = "2018"

[lib]
name = "rustc_privacy"
path = "lib.rs"

[dependencies]
rustc_middle = { path = "../librustc_middle" }
rustc_ast = { path = "../librustc_ast" }
rustc_attr = { path = "../librustc_attr" }
rustc_data_structures = { path = "../librustc_data_structures" }
rustc_errors = { path = "../librustc_errors" }
rustc_hir = { path = "../librustc_hir" }
rustc_lint_types = { path = "../librustc_lint_types" }
rustc_session = { path = "../librustc_session" }
rustc_span = { path = "../librustc_span" }
rustc_typeck = { path = "../librustc_typeck" }
log = "0.4"
