[package]
authors = ["The Rust Project Developers"]
name = "rustc_session"
version = "0.0.0"
edition = "2018"

[lib]
name = "rustc_session"
path = "lib.rs"

[dependencies]
getopts = "0.2"
log = "0.4"
rustc_ast = { path = "../librustc_ast" }
rustc_errors = { path = "../librustc_errors" }
rustc_data_structures = { path = "../librustc_data_structures" }
rustc_feature = { path = "../librustc_feature" }
rustc_fs_util = { path = "../librustc_fs_util" }
rustc_index = { path = "../librustc_index" }
rustc_lint_types = { path = "../librustc_lint_types" }
rustc_serialize = { path = "../libserialize", package = "serialize" }
rustc_span = { path = "../librustc_span" }
rustc_target = { path = "../librustc_target" }
num_cpus = "1.0"
